Bug 379824 - "xmlhttprequest abort method changes readystate to 4". r+sr=sicking, a=blocking1.9.